--- a/html/PBWCL/PBWCL060000.html
+++ b/html/PBWCL/PBWCL060000.html
@@ -47,6 +47,8 @@
 	<!-- AOS -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
+	<!-- freeze-table -->
+	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
@@ -103,7 +105,8 @@
 					<!-- customer-card-list -->
 					<div class="customer-card-list mt40">
 						<strong class="search-result">검색결과</strong>
-						<a href="#" class="customer-card">
+
+						<button type="button" class="customer-card">
 							<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
 							<div class="info-detail-list p0 bg-white-100">
 								<div class="info-table">
@@ -131,7 +134,37 @@
 									</div>
 								</div>
 							</div>
-						</a>
+						</button>
+
+						<button type="button" class="customer-card">
+							<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
+							<div class="info-detail-list p0 bg-white-100">
+								<div class="info-table">
+									<div class="info-body">
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">대표자명</div>
+											<div class="info-td ar">가의정</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">기업상태</div>
+											<div class="info-td ar">정상</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">사업자번호</div>
+											<div class="info-td ar">120-00-00000</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">업종</div>
+											<div class="info-td ar">강선 건조업</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">주소</div>
+											<div class="info-td ar">경기도 성남시 분당구 판교로 227번길(삼평동)</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</button>
 
 					</div>
 					<!-- //customer-card-list -->
