--- a/html/index.html
+++ b/html/index.html
@@ -655,10 +655,82 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td>검색결과</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL060000</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>상세</td>
+						<td>기업일반</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab01</a></td>
+						<td></td>
+					</tr>
+					<tr>
 						<td></td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000</a></td>
+						<td></td>
+						<td></td>
+						<td>기업신용</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab02</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>재무정보</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab03</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>종합의견</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab04</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>연혁</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab05</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>경영진현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab06</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>거래처현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab07</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>주요주주현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab08</a></td>
 						<td></td>
 					</tr>
 
