--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -47,6 +47,8 @@
 	<!-- AOS -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
+	<!-- freeze-table -->
+	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
@@ -241,7 +243,7 @@
 							<!-- customer-card-list -->
 							<div class="customer-card-list">
 								<strong class="search-result">검색결과</strong>
-								<a href="#" class="customer-card">
+								<button type="button" class="customer-card">
 									<strong class="title-medium">홍길동</strong>
 									<dl class="group">
 										<dt>실명번호</dt>
@@ -263,9 +265,9 @@
 										<dt>잠재고객여부</dt>
 										<dd>Y</dd>
 									</dl>
-								</a>
+								</button>
 
-								<a href="#" class="customer-card" data-micromodal-close>
+								<button type="button" class="customer-card" data-micromodal-close>
 									<strong class="title-medium">홍길동</strong>
 									<dl class="group">
 										<dt>실명번호</dt>
@@ -287,7 +289,7 @@
 										<dt>잠재고객여부</dt>
 										<dd>Y</dd>
 									</dl>
-								</a>
+								</button>
 							</div>
 							<!-- //customer-card-list -->
 
