--- a/html/PBWCL/PBWCL020000.html
+++ b/html/PBWCL/PBWCL020000.html
@@ -47,6 +47,8 @@
 	<!-- AOS -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
+	<!-- freeze-table -->
+	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
