--- a/html/PBWCL/PBWCL070000_tab01.html
+++ b/html/PBWCL/PBWCL070000_tab01.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
@@ -196,9 +196,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">주요 주주</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: 천원)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">주요 주주</span>(단위: 천원)</caption>
+										<caption>주요 주주</caption>
 										<thead>
 											<tr>
 												<th scope="col">주요 주주</th>
@@ -229,9 +230,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">종업원 현황</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: 명)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">종업원 현황</span>(단위: 명)</caption>
+										<caption>종업원 현황</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
@@ -254,9 +256,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">관계회사</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: 천원)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">관계회사</span>(단위: 천원)</caption>
+										<caption>관계회사</caption>
 										<thead>
 											<tr>
 												<th scope="col">관계회사</th>
@@ -287,9 +290,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">주요 구매처</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: %)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">주요 구매처</span>(단위: %)</caption>
+										<caption>주요 구매처</caption>
 										<thead>
 											<tr>
 												<th scope="col">주요구매처</th>
@@ -420,7 +424,7 @@
 										<td>Y</td>
 									</tr>
 								</tbody>
-							</table> 
+							</table>
 						</div>
 
 					</div>
