--- a/html/PBWCL/PBWCL070000_tab07.html
+++ b/html/PBWCL/PBWCL070000_tab07.html
@@ -119,9 +119,9 @@
 								<li class="tab"><a role="tab" href="#">기업신용</a></li>
 								<li class="tab"><a role="tab" href="#">재무정보</a></li>
 								<li class="tab"><a role="tab" href="#">종합의견</a></li>
-								<li class="tab tab-active"><a role="tab" href="#">연혁</a></li>
+								<li class="tab"><a role="tab" href="#">연혁</a></li>
 								<li class="tab"><a role="tab" href="#">경영진현황</a></li>
-								<li class="tab"><a role="tab" href="#">거래처현황</a></li>
+								<li class="tab tab-active"><a role="tab" href="#">거래처현황</a></li>
 								<li class="tab"><a role="tab" href="#">주요주주현황</a></li>
 							</ul>
 						</div>
@@ -132,11 +132,91 @@
 
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
-								<h2 class="headline-small">연혁</h2>
+								<h2 class="headline-small">구매처</h2>
+								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
+								<div class="table-col">
+									<table>
+										<caption>구매처</caption>
+										<colgroup>
+											<col>
+											<col style="width:30%;">
+										</colgroup>
+										<thead>
+											<tr>
+												<th scope="col">주요구매처</th>
+												<th scope="col">거래비중</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="al">기타</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성중공업(영성)유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성중공업(영파)유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">영성가이선업유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성화재해상보험(주)</td>
+												<td class="ar">00.00</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+							<!-- //customer-contribution -->
 
-								<p class="body-large mt24">삼성중공업(주)(이하 ‘동사’)는 1974년 8월 설립된 유가증권시장 상장법인으로 유조선, 가스운반선원유시추선외를 주력제품(사업)으로 하는 강선건조업을 영위중이며, 2019년 12월말 현재 총자산 000000000백만원, 자기자본 00000000백만원 이하 텍스트가들어갑니다. 텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다텍스트가들어갑니다</p>
+							<div class="stroke stroke4"></div>
 
-								<div class="body-caption mt8">(2020년도 1분기 분기보고서 기준)</div>
+							<!-- customer-contribution -->
+							<div class="customer-contribution">
+								<h2 class="headline-small">판매처</h2>
+								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
+								<div class="table-col">
+									<table>
+										<caption>판매처</caption>
+										<colgroup>
+											<col>
+											<col style="width:30%;">
+										</colgroup>
+										<thead>
+											<tr>
+												<th scope="col">주요구매처</th>
+												<th scope="col">거래비중</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="al">기타</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성중공업(영성)유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성중공업(영파)유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">영성가이선업유한공사</td>
+												<td class="ar">00.00</td>
+											</tr>
+											<tr>
+												<td class="al">삼성화재해상보험(주)</td>
+												<td class="ar">00.00</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
 							</div>
 							<!-- //customer-contribution -->
 
@@ -160,6 +240,7 @@
 
 	</main>
 	<!-- //main -->
+
 
 
 </body>
