--- a/html/PBWCL/PBWCL070000_tab02.html
+++ b/html/PBWCL/PBWCL070000_tab02.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
@@ -207,9 +207,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">기타 신용정보</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: 천원)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">기타 신용정보</span>(단위: 천원)</caption>
+										<caption>기타 신용정보</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
@@ -246,9 +247,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">휴폐업 정보</h2>
-								<div class="table-col mt24">
+								<div class="caption-visible mt24">(단위: 명)</div>
+								<div class="table-col">
 									<table>
-										<caption class="caption-visible"><span class="blind">휴폐업 정보</span>(단위: 명)</caption>
+										<caption>휴폐업 정보</caption>
 										<thead>
 											<tr>
 												<th scope="col">기준일자</th>
