--- a/html/PBWCL/PBWCL070000_tab03.html
+++ b/html/PBWCL/PBWCL070000_tab03.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
@@ -133,9 +133,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">요약 재무상태표</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
+								<div class="caption-visible mt24">(단위: 백만원)</div>
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table>
-										<caption class="caption-visible"><span class="blind">요약 재무상태표</span>(단위: 백만원)</caption>
+										<caption>요약 재무상태표</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
@@ -231,9 +232,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">요약 손익계산서</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
+								<div class="caption-visible mt24">(단위: 백만원)</div>
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table>
-										<caption class="caption-visible"><span class="blind">요약 손익계산서</span>(단위: 백만원)</caption>
+										<caption>요약 손익계산서</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
@@ -329,9 +331,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">요약 재무비율</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
+								<div class="caption-visible mt24">(단위: 백만원)</div>
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table>
-										<caption class="caption-visible"><span class="blind">요약 재무비율</span>(단위: 백만원)</caption>
+										<caption>요약 재무비율</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
@@ -427,9 +430,10 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">요약 현금흐름 분석</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
+								<div class="caption-visible mt24">(단위: 백만원)</div>
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table>
-										<caption class="caption-visible"><span class="blind">요약 현금흐름 분석</span>(단위: 백만원)</caption>
+										<caption>요약 현금흐름 분석</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
