--- a/html/PBWCL/PBWCL070000_tab06.html
+++ b/html/PBWCL/PBWCL070000_tab06.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
@@ -133,400 +133,63 @@
 							<!-- customer-contribution -->
 							<div class="customer-contribution">
 								<h2 class="headline-small">경영진 현황</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
+								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table>
-										<caption class="caption-visible"><span class="blind">경영진 현황</span>기준일자 : 2022-08-16</caption>
+										<caption>경영진 현황</caption>
 										<thead>
 											<tr>
 												<th scope="col">구분</th>
-												<th scope="col">2022-12-31</th>
-												<th scope="col">2021-12-31</th>
-												<th scope="col">2020-12-31</th>
-												<th scope="col">2019-12-31</th>
-												<th scope="col">2018-12-31</th>
-												<th scope="col">2017-12-31</th>
+												<th scope="col">성명</th>
+												<th scope="col">등기여부</th>
+												<th scope="col">직위</th>
+												<th scope="col">경영실권자와의 관계</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
+												<td>대표이사 및 사원</td>
+												<td>가의정</td>
+												<td>미등기</td>
+												<td>대표이사</td>
+												<td>타인</td>
 											</tr>
 											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
+												<td>대표이사 및 사원</td>
+												<td>가의정</td>
+												<td>미등기</td>
+												<td>대표이사</td>
+												<td>타인</td>
 											</tr>
 											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
+												<td>대표이사 및 사원</td>
+												<td>가의정</td>
+												<td>미등기</td>
+												<td>대표이사</td>
+												<td>타인</td>
 											</tr>
 											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
+												<td>대표이사 및 사원</td>
+												<td>가의정</td>
+												<td>미등기</td>
+												<td>대표이사</td>
+												<td>타인</td>
 											</tr>
 											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
+												<td>대표이사 및 사원</td>
+												<td>가의정</td>
+												<td>미등기</td>
+												<td>대표이사</td>
+												<td>타인</td>
 											</tr>
 										</tbody>
 									</table>
 								</div>
 							</div>
 							<!-- //customer-contribution -->
-
-							<div class="stroke stroke4"></div>
-
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
-								<h2 class="headline-small">요약 손익계산서</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
-									<table>
-										<caption class="caption-visible"><span class="blind">요약 손익계산서</span>(단위: 백만원)</caption>
-										<thead>
-											<tr>
-												<th scope="col">구분</th>
-												<th scope="col">2022-12-31</th>
-												<th scope="col">2021-12-31</th>
-												<th scope="col">2020-12-31</th>
-												<th scope="col">2019-12-31</th>
-												<th scope="col">2018-12-31</th>
-												<th scope="col">2017-12-31</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<th scope="row">매출액</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-							<!-- //customer-contribution -->
-
-							<div class="stroke stroke4"></div>
-
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
-								<h2 class="headline-small">요약 재무비율</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
-									<table>
-										<caption class="caption-visible"><span class="blind">요약 재무비율</span>(단위: 백만원)</caption>
-										<thead>
-											<tr>
-												<th scope="col">구분</th>
-												<th scope="col">2022-12-31</th>
-												<th scope="col">2021-12-31</th>
-												<th scope="col">2020-12-31</th>
-												<th scope="col">2019-12-31</th>
-												<th scope="col">2018-12-31</th>
-												<th scope="col">2017-12-31</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<th scope="row">총자산증가율</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-							<!-- //customer-contribution -->
-
-							<div class="stroke stroke4"></div>
-
-							<!-- customer-contribution -->
-							<div class="customer-contribution">
-								<h2 class="headline-small">요약 현금흐름 분석</h2>
-								<div class="table-col content-fluid overflow-visible px0 mt24 mx-24">
-									<table>
-										<caption class="caption-visible"><span class="blind">요약 현금흐름 분석</span>(단위: 백만원)</caption>
-										<thead>
-											<tr>
-												<th scope="col">구분</th>
-												<th scope="col">2022-12-31</th>
-												<th scope="col">2021-12-31</th>
-												<th scope="col">2020-12-31</th>
-												<th scope="col">2019-12-31</th>
-												<th scope="col">2018-12-31</th>
-												<th scope="col">2017-12-31</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<th scope="row">현금영업이익</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-											<tr>
-												<th scope="row">유동자산</th>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-												<td>8,080,047</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-								<p class="description info body-small mt24 fc-typography-caption">재무기준 : 일반기업회계기준(k-GAAP)</p>
-							</div>
-							<!-- //customer-contribution -->
-
 
 						</div>
 						<!-- //customer-contribution-list -->
-
-
-
 
 					</div>
 					<!-- //customer-card-list -->
