--- a/html/plugins/modal.html
+++ b/html/plugins/modal.html
@@ -44,7 +44,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
