--- a/html/PBWCL/PBWCL070000_tab03.html
+++ b/html/PBWCL/PBWCL070000_tab03.html
@@ -133,7 +133,7 @@
 								<h2 class="headline-small">요약 재무상태표</h2>
 								<div class="caption-visible mt24">(단위: 백만원)</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
-									<table>
+									<table class="column01-sticky">
 										<caption>요약 재무상태표</caption>
 										<thead>
 											<tr>
@@ -232,7 +232,7 @@
 								<h2 class="headline-small">요약 손익계산서</h2>
 								<div class="caption-visible mt24">(단위: 백만원)</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
-									<table>
+									<table class="column01-sticky">
 										<caption>요약 손익계산서</caption>
 										<thead>
 											<tr>
@@ -331,7 +331,7 @@
 								<h2 class="headline-small">요약 재무비율</h2>
 								<div class="caption-visible mt24">(단위: 백만원)</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
-									<table>
+									<table class="column01-sticky">
 										<caption>요약 재무비율</caption>
 										<thead>
 											<tr>
@@ -430,7 +430,7 @@
 								<h2 class="headline-small">요약 현금흐름 분석</h2>
 								<div class="caption-visible mt24">(단위: 백만원)</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
-									<table>
+									<table class="column01-sticky">
 										<caption>요약 현금흐름 분석</caption>
 										<thead>
 											<tr>
@@ -547,17 +547,6 @@
 
 	</main>
 	<!-- //main -->
-
-
-	<script>
-		$(function() {
-			$('.overflow-visible').freezeTable({
-				columnNum: 1,
-				columnBorderWidth: 24,
-				'scrollable': true,
-			});
-		});
-	</script>
 
 </body>
 
