--- a/html/PBWCL/PBWCL070000_tab06.html
+++ b/html/PBWCL/PBWCL070000_tab06.html
@@ -133,7 +133,7 @@
 								<h2 class="headline-small">경영진 현황</h2>
 								<div class="caption-visible mt24">기준일자 : 2022-08-16</div>
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
-									<table>
+									<table class="column01-sticky">
 										<caption>경영진 현황</caption>
 										<thead>
 											<tr>
@@ -206,17 +206,6 @@
 
 	</main>
 	<!-- //main -->
-
-
-	<script>
-		$(function() {
-			$('.overflow-visible').freezeTable({
-				columnNum: 1,
-				columnBorderWidth: 24,
-				'scrollable': true,
-			});
-		});
-	</script>
 
 </body>
 
