--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -109,7 +109,6 @@
 									<p class="validate-text"></p>
 								</div>
 								<!-- //form -->
-								<button type="button" class="btn-border" aria-label="정렬" data-micromodal-trigger="modal-filter"><i class="ico-sorting"></i></button>
 							</div>
 						</div>
 					</div>
@@ -185,7 +184,7 @@
 										<source srcset="../../resources/images/PBWMA/ico-fig-list03.svg">
 										<img src="../../resources/images/PBWMA/ico-fig-list03.svg" alt="">
 									</picture>
-									<figcaption>이달의 추천 펀드</figcaption>
+									<figcaption>이달의 추천</figcaption>
 								</figure>
 							</li>
 						</ul>
@@ -202,7 +201,6 @@
 							<div class="tab-content tab-fluid">
 								<ul class="tab-list tab-col overflow-list px24" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 Best</a></li>
-									<li class="tab"><a role="tab" href="#" class="fs-18">판매 Best</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">국가</a></li>
 								</ul>
@@ -228,7 +226,7 @@
 									</button>
 									<button type="button">
 										<span>텍스트</span>
-										<span class="steady" aria-label="보합"></span>
+										<span class="steady" aria-label="보합">0.00%</span>
 									</button>
 									<button type="button">
 										<span>IT/정보기술</span>
@@ -338,121 +336,6 @@
 
 	</main>
 	<!-- //main -->
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-filter">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-				<div class="modal__header">
-					<strong class="modal__title title-medium">검색 조건</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content">
-
-						<!-- form -->
-						<div class="form">
-							<div class="label"></div>
-							<div class="input-wrap input-btn">
-								<input type="search" placeholder="펀드명, 키워드로 검색해 보세요." aria-label="검색">
-								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
-							</div>
-							<p class="validate-text"></p>
-						</div>
-						<!-- //form -->
-
-
-						<!-- group-form -->
-						<div class="group-form py16 mt16">
-							<div class="group-title">
-								<strong class="title-medium">운용사별</strong>
-							</div>
-							<div class="group-content">
-								<div class="inp inp-board">
-									<input type="checkbox" aria-label="전체">
-									<input type="checkbox" aria-label="우리자산">
-									<input type="checkbox" aria-label="KB자산">
-									<input type="checkbox" aria-label="신한자산">
-									<input type="checkbox" aria-label="하나UBS">
-									<input type="checkbox" aria-label="기타">
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-
-						<!-- group-form -->
-						<div class="group-form py16 mt16">
-							<div class="group-title">
-								<strong class="title-medium">투자지역</strong>
-							</div>
-							<div class="group-content">
-								<div class="inp inp-board">
-									<input type="checkbox" aria-label="전체">
-									<input type="checkbox" aria-label="우리자산">
-									<input type="checkbox" aria-label="KB자산">
-									<input type="checkbox" aria-label="신한자산">
-									<input type="checkbox" aria-label="하나UBS">
-									<input type="checkbox" aria-label="기타">
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form py16 mt16">
-							<div class="group-title">
-								<strong class="title-medium">펀드유형</strong>
-							</div>
-							<div class="group-content">
-								<div class="inp inp-board">
-									<input type="checkbox" aria-label="전체">
-									<input type="checkbox" aria-label="우리자산">
-									<input type="checkbox" aria-label="KB자산">
-									<input type="checkbox" aria-label="신한자산">
-									<input type="checkbox" aria-label="하나UBS">
-									<input type="checkbox" aria-label="기타">
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form py16 mt16">
-							<div class="group-title">
-								<strong class="title-medium">기타</strong>
-							</div>
-							<div class="group-content">
-								<div class="inp inp-board">
-									<input type="checkbox" aria-label="전체">
-									<input type="checkbox" aria-label="우리자산">
-									<input type="checkbox" aria-label="KB자산">
-									<input type="checkbox" aria-label="신한자산">
-									<input type="checkbox" aria-label="하나UBS">
-									<input type="checkbox" aria-label="기타">
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-
-
-					</div>
-				</div>
-				<div class="modal__footer">
-					<!-- bottom-btn -->
-					<div class="bottom-btn">
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-outlined">초기화</button>
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>검색</button>
-						</div>
-					</div>
-					<!-- //bottom-btn -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
 
 
 </body>
