--- a/html/PBWFU/PBWFU000000_result.html
+++ b/html/PBWFU/PBWFU000000_result.html
@@ -160,7 +160,7 @@
 								<div class="divide-list">
 									<span class="divide01">글로벌</span>
 									<div class="division h14 mx8"></div>
-									<span class="divide02">수수료선취 · 온라인</span>
+									<span class="divide01">계열사</span>
 								</div>
 								<dl class="expect-list">
 									<div class="list">
@@ -211,7 +211,7 @@
 								<div class="divide-list">
 									<span class="divide01">글로벌</span>
 									<div class="division h14 mx8"></div>
-									<span class="divide02">수수료선취 · 온라인</span>
+									<span class="divide01">계열사</span>
 								</div>
 								<dl class="expect-list">
 									<div class="list">
@@ -443,7 +443,7 @@
 						<!-- group-form -->
 						<div class="group-form mt16">
 							<div class="group-title py16 px8">
-								<strong class="title-large px0">개월수</strong>
+								<strong class="title-large px0">기간</strong>
 							</div>
 							<div class="group-content mt0">
 								<div class="inp-group">
