--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -103,7 +103,7 @@
 							<div class="form">
 								<div class="input-wrap input-btn">
 									<input type="button" aria-label="통합고객번호" placeholder="" data-micromodal-trigger="modal-number-search">
-									<button type="button" class="input-remove-small" aria-label="입력 내용 삭제"></button>
+									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
 								</div>
 							</div>
@@ -227,7 +227,7 @@
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
 								<input type="tel" placeholder="‘-’ 없이 숫자만 입력해주세요." aria-label="검색">
-								<button type="button" class="input-remove-small" aria-label="입력 내용 삭제"></button>
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
