--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -152,6 +152,60 @@
 										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 									</div>
 								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
+								<li>
+									<div class="btn-xsmall btn-outlined btn-round">
+										<button class="btn-inner">키워드</button>
+										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+									</div>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -196,9 +250,9 @@
 						<div class="group-title py16">
 							<strong class="headline-small inner-ico"><i class="ico-keyword bg-yellow-500"></i>추천 키워드</strong>
 						</div>
-						<div class="group-content content-fluid">
+						<div class="group-content content-fluid px0">
 							<!-- tab-content -->
-							<div class="tab-content tab-fluid">
+							<div class="tab-content">
 								<ul class="tab-list tab-col overflow-list px24" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 Best</a></li>
 									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
